--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
+  
+    background: #F4F4F4;
+
+    height: 100%;
 }
 
 a {
@@ -13,6 +20,11 @@ a {
 
 * {
   box-sizing: border-box;
+
+  font-family: 'Nunito', sans-serif;
+
+  padding: 0;
+  margin: 0;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -21,6 +33,6 @@ a {
   }
   body {
     color: white;
-    background: black;
+    background: #F2F2F2;
   }
 }
