--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 
   
-    background: #F5F5F5;
+    background: #f4f4f4;
 
     height: 100%;
 }
