--- a/styles/pages/Question.module.css
+++ b/styles/pages/Question.module.css
@@ -16,3 +16,11 @@
     width: 310px;
     height: 100%;
 }
+
+.title_answers {
+    margin-top: 50px;
+
+    font-weight: 700;
+    font-size: 20px;
+    color: #494949;
+}
