--- a/styles/components/QuestionQToolbar.module.css
+++ b/styles/components/QuestionQToolbar.module.css
@@ -9,7 +9,69 @@
 
     margin-top: 10px;
 
+    display: flex;
+    flex-direction: column;
+
     padding: 15px;
 
     background-color: white;
+}
+
+/* --- */
+
+.menu {
+    display: flex;
+}
+
+.btn {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    color: #4971FF;
+    font-size: 18px;
+    font-weight: 700;
+
+    background: none;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    
+    padding: 5px 10px;
+    border-radius: 10px;
+}
+.btn:hover {
+    transition: .3s;
+
+    background-color: #DEEBFF;
+}
+
+.btn_name {
+    line-height: 18px;
+}
+
+
+
+
+
+.edit_answer {
+    margin-top: 20px;
+
+    resize: none;
+    outline: none;
+
+    border: 1px solid;
+    border-color: hsl(0, 0%, 80%);
+
+    font-size: 18px;
+
+    padding: 10px;
+
+    border-radius: 10px;
+}
+.edit_answer:focus {
+
+    padding: 9px;
+    border: 2px solid #2684ff;
 }
