--- a/styles/components/AskQuestion/AskQuestion.module.css
+++ b/styles/components/AskQuestion/AskQuestion.module.css
@@ -23,6 +23,8 @@
 /* CONTENT */
 .content {
     padding: 20px 0;
+    display: flex;
+    flex-direction: column;
 }
 
 .textarea {
@@ -53,24 +55,33 @@
     display: flex;
     flex-direction: column;
 
-    margin: 12px 0;
+    margin: 10px 0;
 }
 
 .toolbar_btn {
-    background: #e6effc;
     color: #4c5577;
 
     border: none;
     outline: none;
+    background: none;
     
     font-size: 16px;
     font-weight: 700;
 
-    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-    padding: 8px 16px;
+    border-radius: 50%;
+
+    padding: 10px;
 
     cursor: pointer;
+}
+.toolbar_btn:hover {
+    transition: .3s;
+
+    background: #e6effc;
 }
 
 
