--- a/styles/components/Navbar.module.css
+++ b/styles/components/Navbar.module.css
@@ -148,3 +148,36 @@
 
     background-color: #2851E4;
 }
+
+
+.dropdown {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.exit {
+    display: flex;
+    align-items: center;
+
+    border-radius: 10px;
+
+    padding: 8px 16px;
+
+    background: none;
+    border: none;
+    outline: none;
+    cursor: pointer;
+
+    color: #FF3D3D;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.exit_title {
+    margin-left: 10px;
+}
+.exit:hover {
+    background-color: #FBE5E5;
+
+    transition: .5s;
+}
