--- a/styles/components/AskQuestion/EditAnswer.module.css
+++ b/styles/components/AskQuestion/EditAnswer.module.css
@@ -1,10 +1,17 @@
-.textarea {
+.edit_answer {
     width: 100%;
+
+    display: flex;
+    flex-direction: column;
 }
 
 
 .textarea {
     margin-top: 10px;
+
+    width: 100%;
+
+    position: relative;
 
     resize: none;
     outline: none;
@@ -22,4 +29,28 @@
 
     padding: 9px;
     border: 2px solid #2684ff;
+}
+
+
+.btn_add_answer {
+    margin-top: 10px;
+    padding: 5px;
+
+    border-radius: 10px;
+
+    border: none;
+    outline: none;
+    background: #4971FF;
+
+    color: white;
+    font-size: 18px;
+    font-weight: 700;
+
+    cursor: pointer;
+}
+
+.btn_add_answer:hover {
+    transition: .3s;
+
+    background-color: #2851E4;
 }
