--- a/styles/components/QuestionA.module.css
+++ b/styles/components/QuestionA.module.css
@@ -131,15 +131,14 @@
 
     border-radius: 20px;
 
-    padding: 0 15px;
+    padding: 5px 13px;
     outline: none;
 
-    font-size: 14px;
-    font-weight: 600;
+    font-size: 18px;
 
     border: 1px solid hsl(0, 0%, 80%);
 }
 .input_comment:focus {
     border: 2px solid #2684ff;
-    padding: 0 14px;
+    padding: 4px 12px;
 }
