--- a/styles/pages/Question.module.css
+++ b/styles/pages/Question.module.css
@@ -1,3 +1,9 @@
+.question {
+    display: flex;
+    justify-content: space-between;
+}
+
+
 .left {
     display: flex;
     flex-direction: column;
@@ -5,7 +11,6 @@
     height: 100%;
     width: 630px;
 }
-
 
 
 
