--- a/styles/components/QuestionQ.module.css
+++ b/styles/components/QuestionQ.module.css
@@ -48,6 +48,20 @@
 }
 
 
+.rating {
+    font-size: 18px;
+    font-weight: 700;
+    color: #636777;
+
+    padding: 5px 10px;
+
+
+    border-radius: 10px;
+
+    background: #ebebeb;
+}
+
+
 /* CONTENT */
 .content {
     padding: 13px 5px 0 5px;
