--- a/styles/components/Profile/ProfileInfo.module.css
+++ b/styles/components/Profile/ProfileInfo.module.css
@@ -1,10 +1,10 @@
-.user_info {
+.profile_info {
     box-shadow: rgba(0, 0, 0, 0.04) 0px 0 5px 0px;
 
     border-radius: 10px;
 
     display: flex;
-    align-items: center;
+    flex-direction: column;
     justify-content: space-between;
 
     width: 100%;
@@ -46,4 +46,33 @@
     color: #494949;
     font-weight: 600;
     font-size: 20px;
+}
+
+
+
+
+
+.btn_settings {
+    width: 100%;
+
+    color: #4971FF;
+    font-size: 18px;
+    font-weight: 700;
+
+    padding: 6px;
+    cursor: pointer;
+
+    border-radius: 10px;
+
+    background: #E8F1FF;
+    border: none;
+    outline: none;
+
+    margin-top: 15px;
+}
+
+.btn_settings:hover {
+    transition: .4s;
+
+    background: #E4E4FB;
 }
