--- a/styles/components/Profile/ProfileAnswers/ProfileAnswer.module.css
+++ b/styles/components/Profile/ProfileAnswers/ProfileAnswer.module.css
@@ -5,14 +5,44 @@
 
 }
 .profile_answer:not(:first-child) {
-    margin-top: 15px;
-    /* border-bottom: 1px solid hsl(0, 0%, 80%); */
+    /* margin-top: 15px; */
+    border-top: 1px solid hsl(0, 0%, 85%);
 
+}
+
+.header {
+    width: 100%;
+
+    display: flex;
+    align-items: center;
+
+    font-size: 18px;
+}
+
+.time {
+    
+    color:#7f7f7f;
+}
+
+.item {
+    margin-left: 10px;
+    color:#494949;
+}
+.class {
+    margin-left: 10px;
+    color:#494949;
+}
+
+
+.content {
+    padding: 6px;
 }
 
 .text {
     font-size: 18px;
     font-weight: 600;
+
+    cursor: pointer;
 
     overflow-wrap: anywhere;
     overflow: hidden;
@@ -22,4 +52,9 @@
     font-weight: 500;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
+}
+.text:hover {
+    transition: .4s;
+
+    text-decoration: underline;
 }
