--- a/styles/components/Profile/ProfileAnswers/ProfileAnswers.module.css
+++ b/styles/components/Profile/ProfileAnswers/ProfileAnswers.module.css
@@ -3,7 +3,7 @@
 
     border-radius: 10px;
 
-    margin-top: 50px;
+    margin-top: 40px;
 
     display: flex;
     flex-direction: column;
@@ -13,4 +13,10 @@
     padding: 15px 25px;
 
     background-color: white;
+}
+
+@media screen and (max-width: 1000px) {
+    .profile_answers {
+        margin-top: 20px;
+    }
 }
