--- a/styles/components/Profile/ProfileInfo.module.css
+++ b/styles/components/Profile/ProfileInfo.module.css
@@ -7,9 +7,12 @@
     flex-direction: column;
     justify-content: space-between;
 
-    width: 100%;
+    max-width: 700px;
 
-    padding: 15px;
+
+    margin: 0 auto;
+
+    padding: 20px;
 
     background-color: white;
 }
@@ -21,8 +24,8 @@
 }
 
 .avatar {
-    width: 60px;
-    height: 60px;
+    width: 52px;
+    height: 52px;
 
     border-radius: 50%;
     object-fit: contain;
@@ -36,7 +39,7 @@
     padding-left: 10px;
 }
 .name {
-    font-size: 20px;
+    font-size: 19px;
     font-weight: 700;
 
     line-height: 17px;
@@ -45,7 +48,7 @@
 .level {
     color: #494949;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 19px;
 }
 
 
@@ -56,7 +59,7 @@
     width: 100%;
 
     color: #4971FF;
-    font-size: 18px;
+    font-size: 17px;
     font-weight: 700;
 
     padding: 6px;
@@ -75,4 +78,47 @@
     transition: .4s;
 
     background: #E4E4FB;
+}
+
+
+/* ABOUT */
+
+.about {
+    padding: 20px 0 0 0;
+}
+
+.about_title {
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.about_divider {
+    width: 100%;
+    height: 1px;
+
+    margin: 8px 0;
+    background: hsl(0, 0%, 90%);
+}
+
+.about_info {
+    display: flex;
+    flex-direction: column;
+}
+
+
+
+.menu {
+    padding: 20px 0 0 0;
+
+    display: none;
+    justify-content: space-evenly;
+}
+
+
+@media screen and (max-width: 1000px) {
+
+
+    .menu {
+        display: flex;
+    }
 }
