--- a/styles/layouts/PageContainer.module.css
+++ b/styles/layouts/PageContainer.module.css
@@ -4,9 +4,17 @@
     height: 100%;
 }
 .content {
-    padding: 90px 0 0 0;
+    padding: 90px 10px 0 10px;
     max-width: 1000px;
     margin: 0 auto;
 
     height: 100%;
+}
+
+@media screen and (max-width: 620px) {
+
+
+    .content {
+        padding: 10px 10px;
+    }
 }
