--- a/styles/components/QuestionItem.module.css
+++ b/styles/components/QuestionItem.module.css
@@ -3,8 +3,9 @@
 
     border-radius: 10px;
 
-    width: 630px;
-    max-height: auto;
+    width: 100%;
+
+    margin: 0 auto;
 
     padding: 20px;
 
