--- a/styles/components/QuestionItem.module.css
+++ b/styles/components/QuestionItem.module.css
@@ -49,11 +49,12 @@
 .name {
     color: #232323;
 
-    font-weight: 700;
+    
+    font-weight: 600;
 }
 .hours_item {
     color: #494949;
-    font-weight: 600;
+    font-weight: 500;
 }
 
 /* CONTENT */
@@ -89,11 +90,13 @@
     background: none;
     outline: none;
     cursor: pointer;
+    
 
 
     padding: 5px 10px;
     font-size: 17px;
     font-weight: 700;
+    font-family: 'Nunito', sans-serif;
     color: #4971FF;
 }
 .answer:hover {
