--- a/styles/components/Navbar.module.css
+++ b/styles/components/Navbar.module.css
@@ -16,9 +16,10 @@
 }
 
 
-.logo {
+.logo a {
     font-weight: 900;
     font-size: 2.2em;
+    font-family: 'Nunito', sans-serif;
 
     color: #4971FF;
 }
@@ -136,6 +137,7 @@
 
     font-weight: 700;
     font-size: 18px;
+    font-family: 'Nunito', sans-serif;
     color: white;
 
     padding: 5px 20px;
