--- a/styles/components/SearchQuestion.module.css
+++ b/styles/components/SearchQuestion.module.css
@@ -16,7 +16,7 @@
 }
 
 .search_input {
-    width: 430px;
+    width: 420px;
 
     height: 100%;
 
@@ -50,7 +50,8 @@
 
     padding: 0 20px;
 
-    font-size: 17px;
+    font-size: 18px;
+    font-family: 'Nunito', sans-serif;
     color: #4971FF;
     font-weight: 700;
 }
