--- a/styles/pages/Home.module.css
+++ b/styles/pages/Home.module.css
@@ -1,6 +1,8 @@
 .home {
     display: flex;
     justify-content: space-between;
+
+    height: 100%;
 }
 
 
@@ -15,6 +17,8 @@
 }
 .questions {
     padding: 55px 0 0 0;
+
+    height: 100%;
 
     display: flex;
     flex-direction: column;
@@ -31,6 +35,30 @@
     height: 100%;
 }
 
+.question_skeleton_loading {
+    display: flex;
+    flex-direction: column;
+}
+
+.question_loading {
+    display: none;
+    align-items: center;
+    justify-content: center;
+
+    width: 100%;
+    height: 100%;
+}
+
+
+@media screen and (max-width: 620px) {
+    .question_skeleton_loading {
+        display: none;
+    }
+    .question_loading {
+        display: flex;
+    }
+
+}
 
 
 @media screen and (max-width: 1000px) {
