--- a/styles/components/NavigateMobile.module.css
+++ b/styles/components/NavigateMobile.module.css
@@ -7,11 +7,12 @@
     bottom: 10px;
     z-index: 100;
     width: 96%;
-    height: 55px;
+    height: 56px;
     padding: 10px;
 
     display: none;
     align-items: center;
+    justify-content: space-around;
 
     border-radius: 10px;
 
@@ -21,6 +22,32 @@
     box-shadow: 0px 0px 5px 0px rgba(59, 71, 111, 0.2);
 }
 
+
+.create {
+    border: none;
+    border-radius: 17px;
+    background: #4971FF;
+    outline: none;
+
+    cursor: pointer;
+
+    color: white;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    height: 40px;
+    width: 40px;
+    
+    box-shadow: 0px 0px 5px rgba(42, 27, 61, 0.4);
+}
+.create:hover {
+    height: 38px;
+    width: 38px;
+
+    transition: .5s;
+}
 
 @media screen and (max-width: 620px) {
 
