--- a/styles/components/NavigateMobile.module.css
+++ b/styles/components/NavigateMobile.module.css
@@ -49,6 +49,55 @@
     transition: .5s;
 }
 
+.menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    background: none;
+    border: none;
+
+    cursor: pointer;
+
+    outline: none;
+
+    color: #71716e;
+}
+.menu_title {
+    font-size: 15px;
+    font-weight: 500;
+}
+
+
+
+.user {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: #71716e;
+
+    outline: none;
+
+    cursor: pointer;
+
+    background: none;
+    border: none;
+}
+
+.user_title {
+    font-size: 15px;
+    font-weight: 500;
+}
+
+
+
+
+
+
+
+
 @media screen and (max-width: 620px) {
 
 
