--- a/styles/components/Profile/ProfileInfo.module.css
+++ b/styles/components/Profile/ProfileInfo.module.css
@@ -39,8 +39,8 @@
     padding-left: 10px;
 }
 .name {
-    font-size: 19px;
-    font-weight: 700;
+    font-size: 18px;
+    font-weight: 600;
 
     line-height: 17px;
 }
@@ -48,7 +48,7 @@
 .level {
     color: #494949;
     font-weight: 600;
-    font-size: 19px;
+    font-size: 18px;
 }
 
 
@@ -59,10 +59,10 @@
     width: 100%;
 
     color: #4971FF;
-    font-size: 17px;
-    font-weight: 700;
+    font-size: 16px;
+    font-weight: 600;
 
-    padding: 6px;
+    padding: 8px 6px;
     cursor: pointer;
 
     border-radius: 10px;
@@ -88,7 +88,7 @@
 }
 
 .about_title {
-    font-size: 18px;
+    font-size: 17px;
     font-weight: 600;
 }
 
