--- a/styles/pages/Question.module.css
+++ b/styles/pages/Question.module.css
@@ -1,15 +1,20 @@
 .question {
     display: flex;
     justify-content: space-between;
+
+    width: 100%;
 }
 
 
 .left {
     display: flex;
     flex-direction: column;
+    align-items: center;
 
     height: 100%;
     width: 630px;
+
+    margin: 0 auto;
 }
 
 
@@ -28,4 +33,16 @@
     font-weight: 700;
     font-size: 20px;
     color: #494949;
+}
+
+
+
+
+@media screen and (max-width: 1000px) {
+    .left {
+        max-width: 100%;
+    }
+    .right {
+        display: none;
+    }
 }
