--- a/styles/components/QuestionQ.module.css
+++ b/styles/components/QuestionQ.module.css
@@ -36,28 +36,28 @@
 
     line-height: 20px;
 
-    font-size: 18px;
+    font-size: 16px;
 }
 .name {
     color: #232323;
 
-    font-weight: 700;
+    font-weight: 600;
 }
 .hours_item {
     color: #494949;
-    font-weight: 600;
+    font-weight: 500;
 }
 
 
 .rating {
     font-size: 18px;
-    font-weight: 700;
+    font-weight: 600;
     color: #636777;
 
-    padding: 5px 10px;
+    padding: 4px 8px;
 
 
-    border-radius: 10px;
+    border-radius: 8px;
 
     background: #ebebeb;
 }
@@ -72,7 +72,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    font-size: 19px;
+    font-size: 17px;
     font-weight: 500;
     -webkit-box-orient: vertical;
 }
@@ -112,4 +112,11 @@
 
 
     overflow-wrap: anywhere;
+}
+
+
+@media screen and (max-width: 620px) {
+    .text {
+        /* font-size: 17px; */
+    }
 }
