--- a/styles/components/QuestionQToolbar.module.css
+++ b/styles/components/QuestionQToolbar.module.css
@@ -12,7 +12,7 @@
     display: flex;
     flex-direction: column;
 
-    padding: 10px;
+    padding: 8px 10px;
 
     background-color: white;
 }
@@ -30,8 +30,8 @@
     align-items: center;
 
     color: #4971FF;
-    font-size: 16px;
-    font-weight: 700;
+    font-size: 15px;
+    font-weight: 600;
 
     background: none;
     border: none;
