--- a/styles/components/QuestionItem.module.css
+++ b/styles/components/QuestionItem.module.css
@@ -109,6 +109,9 @@
 
 
 @media screen and (max-width: 620px) {
+    .info {
+        font-size: 15px;
+    }
     .text {
         font-size: 16px;
     }
