--- a/styles/components/QuestionQ.module.css
+++ b/styles/components/QuestionQ.module.css
@@ -34,7 +34,7 @@
     flex-direction: column;
     justify-content: center;
 
-    line-height: 20px;
+    line-height: 17px;
 
     font-size: 16px;
 }
@@ -116,6 +116,9 @@
 
 
 @media screen and (max-width: 620px) {
+    .info {
+        font-size: 15px;
+    }
     .text {
         font-size: 16px;
     }
