--- a/styles/components/AskQuestion/EditAnswer.module.css
+++ b/styles/components/AskQuestion/EditAnswer.module.css
@@ -19,7 +19,7 @@
     border: 1px solid;
     border-color: hsl(0, 0%, 80%);
 
-    font-size: 18px;
+    font-size: 16px;
 
     padding: 10px;
 
@@ -43,8 +43,8 @@
     background: #4971FF;
 
     color: white;
-    font-size: 18px;
-    font-weight: 700;
+    font-size: 17px;
+    font-weight: 600;
 
     cursor: pointer;
 }
@@ -53,4 +53,15 @@
     transition: .3s;
 
     background-color: #2851E4;
+}
+
+
+@media screen and (max-width: 620px) {
+    .btn_add_answer {
+        font-size: 16px;
+    }
+
+    .textarea {
+        font-size: 15px;
+    }
 }
