--- a/styles/components/AskQuestion/EditComment.module.css
+++ b/styles/components/AskQuestion/EditComment.module.css
@@ -8,11 +8,20 @@
     
     outline: none;
 
-    font-size: 18px;
+    font-size: 16px;
 
     border: 1px solid hsl(0, 0%, 80%);
 }
 .edit_comment:focus {
     border: 2px solid #2684ff;
     padding: 4px 12px;
+}
+
+
+
+@media screen and (max-width: 620px) {
+
+    .edit_comment {
+        font-size: 15px;
+    }
 }
