--- a/styles/components/QuestionA.module.css
+++ b/styles/components/QuestionA.module.css
@@ -134,7 +134,7 @@
     padding: 5px 13px;
     outline: none;
 
-    font-size: 18px;
+    font-size: 16px;
 
     border: 1px solid hsl(0, 0%, 80%);
 }
@@ -150,5 +150,8 @@
     }
     .text {
         font-size: 16px;
+    }
+    .input_comment {
+        font-size: 15px;
     }
 }
