--- a/styles/components/Profile/ProfileAnswers/ProfileAnswer.module.css
+++ b/styles/components/Profile/ProfileAnswers/ProfileAnswer.module.css
@@ -14,7 +14,8 @@
     width: 100%;
 
     display: flex;
-    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 
     font-size: 16px;
 }
@@ -59,6 +60,11 @@
     text-decoration: underline;
 }
 
+.time_mobile {
+    display: none;
+    color:#7f7f7f;
+}
+
 
 @media screen and (max-width: 620px) {
     .header {
@@ -70,5 +76,17 @@
 
     .item,.class {
         font-size: 15px;
+    }
+    .item {
+        margin-left: 0;
+    }
+
+    .time {
+        display: none;
+    }
+
+
+    .time_mobile {
+        display: block;
     }
 }
