--- a/styles/components/SearchQuestion.module.css
+++ b/styles/components/SearchQuestion.module.css
@@ -4,8 +4,7 @@
     border-radius: 10px;
 
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    flex-direction: column;
 
     max-width: 630px;
 
@@ -13,6 +12,17 @@
 
     background-color: white;
 }
+
+.search {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+
+    width: 100%;
+    height: 100%;
+}
+
 
 .search_input {
     width: 420px;
@@ -62,11 +72,27 @@
 }
 
 
+
+.filtred {
+    display: none;
+    margin-top: 12px;
+    justify-content: space-between;
+}
+
+.filtred_item,.filtred_class {
+    width: 48%;
+}
+
+
 @media screen and (max-width: 1000px) {
 
 
     .search_question {
         margin-bottom: 30px;
+    }
+
+    .filtred {
+        display: flex;
     }
 }
 
