--- a/styles/pages/Settings.module.css
+++ b/styles/pages/Settings.module.css
@@ -26,7 +26,9 @@
 @media screen and (max-width: 1000px) {
     .left {
         display: block;
-        width: 100%;
+        max-width: 630px;
+
+        margin: 0 auto;
     }
     .right {
         display: none;
