--- a/styles/components/Settings/Settings.module.css
+++ b/styles/components/Settings/Settings.module.css
@@ -27,7 +27,7 @@
     color: #232323;
 
     cursor: pointer;
-    padding: 3px 5px;
+    padding: 5px 12px;
     border-radius: 5px;
 
     background: none;
@@ -35,7 +35,7 @@
     border: none;
 }
 .name {
-    font-size: 16px;
+    font-size: 17px;
     font-weight: 600;
     margin-left: 5px;
 }
@@ -51,3 +51,62 @@
     padding: 20px 0 0 0;
 }
 
+
+
+
+/* SETTINGS MOBILE */
+
+.settings_mobile {
+    box-shadow: rgba(0, 0, 0, 0.04) 0px 0 5px 0px;
+
+    border-radius: 10px;
+
+    width: 100%;
+    height: 100%;
+
+    padding: 20px;
+    margin: 0 auto;
+    display: none;
+    flex-direction: column;
+
+    background-color: white;
+}
+
+.mobile_header {
+    width: 100%;
+
+    padding: 0 10px 15px 10px;
+
+    display: flex;
+    align-items: center;
+
+    border-bottom: 1px solid hsl(0, 0%, 85%);
+}
+
+.mobile_header_back {
+    cursor: pointer;
+}
+
+.mobile_header_title {
+    width: calc(100% - 44px);
+    text-align: center;
+
+    font-size: 18px;
+    font-weight: 600;
+}
+
+
+
+
+
+
+
+
+@media screen and (max-width: 1000px) {
+    .settings_mobile {
+        display: flex;
+    }
+    .settings {
+        display: none;
+    }
+}
