--- a/styles/layouts/Dropdown.module.css
+++ b/styles/layouts/Dropdown.module.css
@@ -3,14 +3,14 @@
     top: 60px;
     right: 0;
 
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    box-shadow: 0 1px 4px 0 rgba(0,0,0,0.16);
     border-radius: 10px;
 
-    width: 240px;
+    min-width: 200px;
     height: auto;
 
 
-    padding: 5px;
+    padding: 8px;
 
     background-color: white;
 
