--- a/styles/components/Navbar.module.css
+++ b/styles/components/Navbar.module.css
@@ -182,7 +182,7 @@
     margin-left: 10px;
 }
 .exit:hover {
-    background-color: #fbe8e8;
+    background-color: #F3F4FF;
 
     transition: .5s;
 }
