--- a/styles/components/QuestionA.module.css
+++ b/styles/components/QuestionA.module.css
@@ -64,7 +64,8 @@
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    font-size: 17px;
+    font-size: 18px;
+    font-family: "Roboto", sans-serif;
     font-weight: 500;
     -webkit-box-orient: vertical;
 }
