--- a/styles/components/QuestionItem.module.css
+++ b/styles/components/QuestionItem.module.css
@@ -68,7 +68,8 @@
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    font-size: 17px;
+    font-size: 18px;
+    font-family: 'Roboto', sans-serif;
     font-weight: 500;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
@@ -113,7 +114,7 @@
         font-size: 15px;
     }
     .text {
-        font-size: 16px;
+        font-size: 17px;
     }
 
     .answer {
