--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,7 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 
   
-    background: #f4f4f4;
+    background: #F0F5FF;
 
     height: 100%;
 }
