--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,11 +6,11 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family: -apple-system, Montserrat, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 
   
-    background: #F0F5FF;
+    background: #F1F6FF;
 
     height: 100%;
 }
@@ -26,10 +26,33 @@ a {
 * {
   box-sizing: border-box;
 
-  font-family: 'Montserrat', sans-serif;
+  /* font-family: 'Montserrat', sans-serif; */
 
   padding: 0;
   margin: 0;
+}
+
+div.DraftEditor-root {
+  height: 100%;
+  width: 100%;
+
+  font-size: 18px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+}
+
+div.DraftEditor-editorContainer,
+div.public-DraftEditor-content {
+  height: 100%;
+
+  font-family: 'Roboto', sans-serif;
+}
+
+
+@media screen and (max-width: 620px) {
+  div.DraftEditor-root {
+    font-size: 16px;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
