--- a/styles/pages/Auth.module.css
+++ b/styles/pages/Auth.module.css
@@ -69,17 +69,19 @@
     border: none;
     border: 1px solid;
     border-color: hsl(0, 0%, 80%);
-    padding: 5px 10px;
+    padding: 8px 12px;
+
+    font-family: 'Roboto', sans-serif;
 
 
     font-weight: 600;
-    font-size: 18px;
+    font-size: 16px;
 }
 .input:not(:first-child) {
     margin-top: 20px;
 }
 .input:focus {
-    padding: 4px 9px;
+    padding: 7px 11px;
 
     border: 2px solid #2684ff;
 }
