--- a/styles/components/SearchQuestion.module.css
+++ b/styles/components/SearchQuestion.module.css
@@ -25,7 +25,7 @@
 
 
 .search_input {
-    width: 420px;
+    width: 400px;
 
     height: 100%;
 
@@ -58,6 +58,7 @@
     background: none;
 
     padding: 0 20px;
+    margin-left: 10px;
 
     font-size: 18px;
     font-family: 'Nunito', sans-serif;
